# rustVideoEdit

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logsys.rs  main.rs  paths.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  project.rs
src-tauri/src/ffmpeg/: encode.rs  filtergraph.rs  locate.rs  mod.rs  probe.rs
src/components/common/: icons.tsx
src/components/dialogs/: AboutDialog.tsx  SettingsDialog.tsx  UpdateBanner.tsx
src/components/export/: ExportDialog.tsx
src/components/layout/: Header.tsx
src/components/mediabin/: MediaBin.tsx
src/components/preview/: MosaicEditOverlay.tsx  PreviewPanel.tsx  PreviewSurface.tsx  TransportBar.tsx
src/components/properties/: DragNumber.tsx  PropertiesPanel.tsx
src/components/timeline/: ClipView.tsx  Ruler.tsx  Timeline.tsx  TimelineToolbar.tsx  TrackHeader.tsx  TrackLane.tsx  timelineMath.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  zh-CN.json
src/lib/: appSettings.ts  chime.ts  exportSpec.ts  ipc.ts  logger.ts  mosaic.ts  mosaicActions.ts  projectActions.ts  shortcuts.ts  srt.ts  time.ts  waveform.ts
src/lib/playback/: PlaybackEngine.ts
src/stores/: projectStore.ts  uiStore.ts
src/styles/: base.css  tokens.css
src/types/: model.ts
