[package]
name = "rustvideoedit"
version = "0.1.0"
description = "rustVideoEdit"
authors = ["dikmri"]
edition = "2021"

[lib]
name = "rustvideoedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
tracing-appender = "0.2"
chrono = "0.4"
dirs = "5"
